--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1384,17 +1384,17 @@ a.text-dark:hover, a.text-dark:focus {
 .card-blog {
   position: relative;
   display: block;
-  max-width: 264px;
+  max-width: 1028px;
   margin: 0 auto;
   background-color: #fff;
-  border-radius: 4px;
-  border: 1px solid #E5E5E5;
+  border-radius: 0.5rem;
+  border: 1px solid #8b8a8a;
   overflow: hidden;
 }
 
 .card-blog .header {
   width: 100%;
-  height: 140px;
+  height: 280px;
   background-color: #9A9F97;
   overflow: hidden;
 }
