--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,3 +125,11 @@
 } */
 
   /* End star img */
+
+  /* icon title */
+.icon {
+  margin-right: 10px;
+  font-size: 24px;
+}
+
+  /* end icon title */
